# Jorge_Wilker_embarcatech_HBr_2025

./: README.md
projects/: .gitignore
projects/Contador_descescente_Semana_6_v4/: CMakeLists.txt  Readme.md
projects/Contador_descescente_Semana_6_v4/src/: font.h  main.c  ssd1306.c  ssd1306.h
projects/Leituras_Joystick_Semana_6_v3/: CMakeLists.txt  README.md
projects/Leituras_Joystick_Semana_6_v3/.cursor/rules/: regra-src-assets-docs-cmakelist.mdc
projects/Leituras_Joystick_Semana_6_v3/src/: font.h  main.c  ssd1306.c  ssd1306.h
projects/Ler_temp_interna_semana_6_v1/: CMakeLists.txt  README.MD
projects/Ler_temp_interna_semana_6_v1/src/: main.c
projects/galton_board_v1.1/: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
projects/galton_board_v1.1/assets/: galton_board.txt
projects/galton_board_v1.1/include/: galton.h  ssd1306_i2c.c  ssd1306_i2c.h
projects/galton_board_v1.1/src/: galton.c  main.c
projects/galton_board_v1.2/: .gitignore
projects/galton_board_v1.2/docs/: galton_board_concept.md
projects/pico_temp_unity_test/: CMakeLists.txt  README.md
projects/pico_temp_unity_test/src/: temperature.c  temperature.h  unity_config.h
projects/pico_temp_unity_test/test/: test_temperature.c
projects/sintetizador_de_audio/: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
projects/sintetizador_de_audio/include/: audio_pwm.h  buttons.h  led_rgb.h  ssd1306_i2c.h
projects/sintetizador_de_audio/src/: audio_pwm.c  buttons.c  led_rgb.c  main.c  ssd1306_i2c.c
projects/tarefa_arquitetura_modular/: CMakeLists.txt  README.md
projects/tarefa_arquitetura_modular/app/: main.c
projects/tarefa_arquitetura_modular/drivers/: led_embutido.c
projects/tarefa_arquitetura_modular/hal/: hal_led.c
projects/tarefa_arquitetura_modular/include/: hal_led.h  led_embutido.h
tarefas/: .gitignore  CMakeLists.txt  cursor-rules.json  lwipopts.h  main.c  mqtt_comm.c
tarefas/include/: mqtt_comm.h
tarefas/tarefa-iot-security/: .gitignore  CMakeLists.txt  README.md
tarefas/tarefa-iot-security/include/: mqtt_comm.h  ssd1306_i2c.h  wifi_conn.h
tarefas/tarefa-iot-security/src/: iot_security_lab.c  mqtt_comm.c  ssd1306_i2c.c  wifi_conn.c
tarefas/tarefa_ pesquisa_aplicações_iot_jwma_e_mlg/: README.md
tarefas/tarefa_acelerometro/: CMakeLists.txt  README.md  pico_sdk_import.cmake
tarefas/tarefa_acelerometro/include/: ssd1306_i2c.c
tarefas/tarefa_acelerometro/src/: main.c
tarefas/tarefa_iot_sustentabilidade_JWMA v1.1/: README.md  Tarefa_ Pesquisa sobre Aplicações da Internet das Coisas.md
tarefas/tarefa_motor_dc_bitdoglab/: .gitignore  CMakeLists.txt  LICENSE  README.md
tarefas/tarefa_motor_dc_bitdoglab/include/: ssd1306_font.h  tb6612fng.c  tb6612fng.h
tarefas/tarefa_motor_dc_bitdoglab/src/: main.c
tarefas/tarefa_projeto_integrado_iot_atualizacao_ota/: README.md
tarefas/tarefa_rtos_dupla/: .gitignore  CMakeLists.txt  README.md  caldeira_main.c  ws2818b.pio
